--- a/pom.xml
+++ b/pom.xml
@@ -898,6 +898,11 @@
           <artifactId>maven-bundle-plugin</artifactId>
           <version>2.5.3</version>
         </plugin>
+        <plugin>
+          <groupId>net.revelc.apilyzer</groupId>
+          <artifactId>apilyzer-maven-plugin</artifactId>
+          <version>1.0.0</version>
+        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
